# ref-net

./: .env.docker  .env.example  .gitignore  .gitmessage  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  codecov.yml  docker-compose.monitoring.yml  docker-compose.override.yml  docker-compose.yml  moon.yml
.github/: pull_request_template.md
.github/workflows/: ci.yml  security-scan.yml
.moon/: projects.yml  tasks.yml  toolchain.yml  workspace.yml
docker/nginx/: nginx.conf  ssl-nginx.conf
docs/design/: architecture.drawio  architecture.md  sequence.md  system_design.md
docs/development/: coding-base.md  coding-cdk.md  coding-standards.md  coding-test.md
docs/infrastructure/: architecture-diagram.md  network-topology.md  service-dependencies.md
docs/operations/: backup-restore.md  maintenance-tasks.md  monitoring-guide.md  startup-shutdown.md
docs/security/: incident_response_procedure.md  patch_management.md  security_audit_checklist.md
docs/semantic_scholar/: swagger.json
docs/spec/flowchart/: lambda_initial.md  lambda_retry.md  paper_processor.md  pdf_summarizer.md
docs/spec/queue/: celery_queue.md
docs/spec/storage/: dynamodb_table.md  local_storage.md  postgresql_capacity.md  s3_bucket.md
docs/spec/table/: paper_records.md  postgresql_tables.md
docs/summarizer/: ai-integration.md
docs/tasks/: 00_parallel_development_strategy.md  00_project_structure.md  01_monorepo_setup.md  02_shared_foundation.md  10_database_models.md  20_api_service.md  21_crawler_service.md  22_summarizer_service.md  23_generator_service.md  30_docker_setup.md  README.md  development_strategy.md
docs/tasks/phase_01/: 00_project_structure.md  01_monorepo_setup.md  02_shared_foundation.md  (+2 more)
docs/troubleshooting/: common-issues.md  incident-response.md  recovery-procedures.md
monitoring/alertmanager/: alertmanager.yml
monitoring/prometheus/: prometheus.yml
package/: README.md
package/api/: Dockerfile  README.md  coverage.json  main.py  moon.yml  pyproject.toml  test.db
package/batch/: main.py  pyproject.toml
package/crawler/: Dockerfile  README.md  coverage.json  main.py  moon.yml  pyproject.toml
package/crawler/src/refnet_crawler/: celery_app.py  main.py
package/crawler/src/refnet_crawler/clients/: semantic_scholar.py
package/crawler/src/refnet_crawler/models/: paper_data.py
package/crawler/src/refnet_crawler/services/: crawler_service.py
package/crawler/src/refnet_crawler/tasks/: __init__.py  crawl_task.py
package/crawler/tests/: test_crawl_task.py  test_crawler_service.py  test_dummy.py  test_main.py  test_semantic_scholar_client.py  test_tasks.py
package/generator/: Dockerfile  README.md  coverage.json  main.py  moon.yml  pyproject.toml
package/generator/src/refnet_generator/: __init__.py  celery_app.py  main.py
package/generator/src/refnet_generator/services/: generator_service.py
package/generator/src/refnet_generator/tasks/: __init__.py  generate_task.py
package/generator/src/refnet_generator/templates/: index.md.j2  network.md.j2  paper.md.j2
package/generator/tests/: test_celery_app.py  test_generate_task.py  test_generator_service.py  test_main.py  test_tasks.py
package/infra/: cdk.json  moon.yml  pyproject.toml
package/infra/src/construct/resource/: bucket.py  function.py  table.py
package/infra/src/model /: env.py  project.py
package/shared/: Dockerfile.beat  Dockerfile.flower  README.md  alembic.ini  coverage.json  main.py  moon.yml  pyproject.toml
package/shared/alembic/: env.py
package/shared/alembic/versions/: 20250707_110446_initial_database_schema.py  20250712_072821_add_integration_fields_to_paper_model.py
package/shared/src/refnet_shared/: __init__.py  celery_app.py  cli.py  cli_batch.py
package/shared/src/refnet_shared/auth/: __init__.py  jwt_handler.py
package/shared/src/refnet_shared/config/: __init__.py  environment.py
package/shared/src/refnet_shared/exceptions/: __init__.py
package/shared/src/refnet_shared/middleware/: __init__.py  rate_limiter.py
package/shared/src/refnet_shared/models/: __init__.py  database.py  database_manager.py  paper.py  schemas.py
package/shared/src/refnet_shared/security/: __init__.py  audit_logger.py  celery_security.py
package/shared/src/refnet_shared/tasks/: __init__.py  maintenance.py  monitoring.py  monitoring_tasks.py  scheduled_tasks.py
package/shared/src/refnet_shared/utils/: __init__.py  auto_recovery.py  config_utils.py  metrics.py  migration_utils.py  security_audit.py
package/shared/tests/: conftest.py  test_advanced_rate_limiter.py  test_auth.py  test_auto_recovery.py  test_batch_automation.py  test_celery_app.py  test_celery_security.py  test_cli.py  test_cli_batch.py  test_cli_extended.py  test_config.py  test_config_utils.py  test_environment_config.py  test_exceptions.py  test_maintenance_tasks.py  test_middleware.py  test_migrations.py  test_models.py  test_monitoring_tasks.py  test_monitoring_tasks_extended.py  test_scheduled_tasks.py  test_security_audit_logger.py  test_utils.py
package/summarizer/: Dockerfile  README.md  coverage.json  main.py  moon.yml  pyproject.toml
package/summarizer/src/refnet_summarizer/: celery_app.py  main.py
package/summarizer/src/refnet_summarizer/clients/: ai_client.py
package/summarizer/src/refnet_summarizer/processors/: pdf_processor.py
package/summarizer/src/refnet_summarizer/services/: summarizer_service.py
package/summarizer/src/refnet_summarizer/tasks/: __init__.py  summarize_task.py
package/summarizer/tests/: conftest.py  test_ai_client.py  test_main.py  test_pdf_processor.py  test_summarize_task.py  test_summarizer_service.py  test_tasks.py
scripts/: backup-database.sh  create_moon_yml.py  create_package_readme.py  dev.sh  docker-dev.sh  fix_moon_tasks.py  generate-ssl-cert.sh  generate_vulnerability_report.py  init-db.sql  moon-check.sh  restore-database.sh  security_monitoring.py  setup_security_cron.sh  update_dependencies.sh  update_pyproject.py
tests/: conftest.py  test_docker_integration.py  test_monitoring.py  test_security.py  test_security_monitoring.py
tools/: moon.yml
(+58 files in other folders)
