[project]
name = "refnet-shared"
version = "0.1.0"
description = "Shared utilities and models for ref-net system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "structlog>=23.0.0",
    "click>=8.0.0",
    "fastapi>=0.104.0",
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "prometheus-client>=0.20.0",
    "psutil>=7.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "mypy>=1.16.1",
    "ruff>=0.12.1",
    "types-passlib>=1.7.7",
    "types-redis>=4.6.0",
    "types-psutil>=7.0.0.20250601",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/refnet_shared"]

[project.scripts]
refnet-shared = "refnet_shared.cli:main"
refnet-batch = "refnet_shared.cli_batch:batch"

[tool.ruff]
line-length = 150
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["UP017"]  # datetime.UTC alias - mypy doesn't recognize it yet

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
extra_checks = true
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["celery.*", "celery.result.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/refnet_shared --cov-report=term-missing --cov-report=html --cov-report=json"
filterwarnings = [
    "ignore::DeprecationWarning:sqlalchemy.*",
    "ignore::DeprecationWarning:.*sqlite3.*"
]

[tool.coverage.run]
source = ["src/refnet_shared"]
omit = ["*/tests/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 80
